--- a/templates/Class09_Content.html
+++ b/templates/Class09_Content.html
@@ -1,6 +1,6 @@
 <p class="task__chapter">Due:</p>
 <ul>
-<li class="task__list">Bring laptop and drawing supplies to class for an in-class exercise.</li>
+<li class="task__list">Bring your full scale slopers, drafting tools, fabric and sewing supplies to class for an in-class exercise.</li>
 <li class="task__list" style="text-decoration-line:underline">Sample Book Productivity</li>
 <li class="task__list">Bring the following samples to class for review:</li>
 <ul>
