--- a/templates/Class09_Content.html
+++ b/templates/Class09_Content.html
@@ -7,6 +7,7 @@
 <li>Torso Slopers (2 pieces)</li>
 <li>Kimono Slopers (2 pieces)</li>
 <li>Raglan Slopers (3 pieces)</li>
+<li>One of the samples sewn in muslin</li>
 </ul>
 </ul>
 <p class="task__chapter">Before Class:</p>
