--- a/templates/Class11_Content.html
+++ b/templates/Class11_Content.html
@@ -40,7 +40,7 @@
 </ul>
 <p class="task__chapter">During Class:</p>
 <ul>
-<li>Drafting and sewing an inset neckline placket.</li>
+<li><s>Drafting and sewing an inset neckline placket.</s></li>
 <li>Drafting a sleeve cuff.</li>
 <li>Sewing the sleeve placket sample.</li>
 </ul>
