--- a/templates/Class05_Content.html
+++ b/templates/Class05_Content.html
@@ -1,15 +1,6 @@
 <p class="task__chapter">Due:</p>
 <ul class="task__list">
-<li style="text-decoration: underline">Productivity Check-in 01. Bring the following samples to class for review:</li>
-<ul>
-<li>Printed copy of Productivity Check-in 01 Checklist </li>
-<li>Dart rotation Slash and Spread Pattern </li>
-<li>Dart rotation Pivoting Pattern </li>
-<li>Dart Distribution Side Seam/Waist Sloper</li>
-<li>Shoulder Princess Patterns (4 pieces)</li>
-<li>Multiple Dart Transformation Patterns (3 pieces)</li>
-<li>Multiple Dart Transformation sewing sample</li>
-</ul>
+<li style="text-decoration: underline">Productivity Check-in 01. See assignment brief for deliverables.</li>
 </ul>
 <p class="task__chapter">Before Class:</p>
 <ul class="task__list">
@@ -37,4 +28,5 @@
 <ul class="task__list">
 <li>Complete drafting the Torso slopers and Raglan sleeve slopers in half scale.</li>
 <li>Read pp.179-200, 333-336 <strong>(pp.211-232, 385-388)</strong> before Class Six.</li>
+
 </ul>
