--- a/templates/Class09_Content.html
+++ b/templates/Class09_Content.html
@@ -1,14 +1,6 @@
 <p class="task__chapter">Due:</p>
 <ul>
-<li style="text-decoration: underline">Productivity Check-in 03. Bring the following samples to class for review:</li>
-<ul>
-<li>Printed copy of Productivity Check-in 03 Checklist </li>
-<li>Basic Shirt/Blouse Slopers (3 pieces)</li>
-<li>Separate Button placket</li>
-<li>Add-on/Fold-back button placket</li>
-<li>Hidden button placket</li>
-<li>Full scale sleeve placket and cuff sewing sample</li>
-</ul>
+<li style="text-decoration: underline">Productivity Check-in 03. See assignment brief for deliverables.</li>
 </ul>
 <p class="task__chapter">Before Class:</p>
 <ul>
@@ -37,3 +29,4 @@
 <li>Complete drafting the trouser slopers with accompanying waistband in full scale.</li>
 <li>Read pp.276-277, 281-283, 155-157 <strong>(pp.320-321, 325-327, 179-181)</strong> before Class Ten.</li>
 </ul>
+
