--- a/templates/Class11_Content.html
+++ b/templates/Class11_Content.html
@@ -1,12 +1,6 @@
 <p class="task__chapter">Due:</p>
 <ul>
-<li style="text-decoration: underline">Productivity Check-in 04. Bring the following samples to class for review:</li>
-<ul>
-<li>Printed copy of Productivity Check-in 04 Checklist </li>
-<li>Full scale Trouser Slopers (2 pieces)</li>
-<li>Full scale Trouser Waistband Sloper</li>
-<li>J-fly sewing sample</li>
-</ul>
+<li style="text-decoration: underline">Productivity Check-in 04. See assignment brief for deliverables.</li>
 </ul>
 <p class="task__chapter">Before Class:</p>
 <ul>
@@ -39,3 +33,4 @@
 <li>Continue drafting full Runway Recreation design (shirt and trousers)</li>
 <li>Read pp.159-168 <strong>(pp.187-196)</strong> before Class Twelve.</li>
 </ul>
+
