--- a/templates/Class10_Content.html
+++ b/templates/Class10_Content.html
@@ -1,3 +1,7 @@
+<p class="task__chapter">Due:</p>
+<ul>
+<li style="text-decoration: underline">Productivity Check-in 02 and 03. See assignment brief for deliverables.</li>
+</ul>
 <p class="task__chapter">Before Class:</p>
 <ul>
 <li class="task__list">Bring the following pattern pieces (cut, notched, and marks transferred) to class:</li>
@@ -34,4 +38,5 @@
 <li style="text-decoration-line:underline">Carefully cut and sew the J-Fly sewing sample in full scale and bring it to our next class meeting.</li>
 <li>Begin drafting Runway Recreation patterns in full scale (shirt and trousers).</li>
 <li>Read pp.155-157, 276-277 <strong>(pp.179-181, 320-321)</strong> before Class Eleven.</li>
+
 </ul>
