--- a/templates/Class07_Content.html
+++ b/templates/Class07_Content.html
@@ -1,6 +1,6 @@
-<p class="task__chapter">Due:</p>
+<p class="task__chapter"><s>Due:</s></p>
 <ul>
-<li style="text-decoration: underline">Productivity Check-in 02. See assignment brief for deliverables.</li>
+<li style="text-decoration: underline"><s>Productivity Check-in 02. See assignment brief for deliverables.</s></li>
 </ul>
 <p class="task__chapter">Before Class:</p>
 <ul>
@@ -30,3 +30,4 @@
 <li>Read pp.450-452 <strong>(pp.526-528)</strong> before Class Eight.</li>
 
 </ul>
+
