--- a/templates/Class10_Content.html
+++ b/templates/Class10_Content.html
@@ -1,6 +1,6 @@
 <p class="task__chapter">Due:</p>
 <ul>
-<li style="text-decoration: underline">Productivity Check-in 02 and 03. See assignment brief for deliverables.</li>
+<li style="text-decoration: underline">Productivity Check-in 03. See assignment brief for deliverables.</li>
 </ul>
 <p class="task__chapter">Before Class:</p>
 <ul>
@@ -40,3 +40,4 @@
 <li>Read pp.155-157, 276-277 <strong>(pp.179-181, 320-321)</strong> before Class Eleven.</li>
 
 </ul>
+
