--- a/templates/Class07_Content.html
+++ b/templates/Class07_Content.html
@@ -22,12 +22,13 @@
 <ul>
 <li>Modifying the bodice into a shirt sloper</li>
 <li>Casual shirt drafting review</li>
-<li>In-class Garment Drafting Exercise</li>
+<li><s>In-class Garment Drafting Exercise</s></li>
 </ul>
 <p class="task__chapter">After Class:</p>
 <ul class="task__list">
-<li>Complete drafting the basic shirt and corresponding sleeve slopers.</li>
+<li>Practice drafting the basic shirt and corresponding sleeve slopers.</li>
 <li>Read pp.450-452 <strong>(pp.526-528)</strong> before Class Eight.</li>
 
 </ul>
+
 
