--- a/templates/Class08_Content.html
+++ b/templates/Class08_Content.html
@@ -31,7 +31,7 @@
 </ul>
 <p class="task__chapter">After Class:</p>
 <ul class="task__list">
-<li style="text-decoration-line:underline">Complete the basic shirt/blouse with sleeve and all 3 button placket drafting samples in half scale and bring them to our next class meeting.</li>
+<li style="text-decoration-line:underline">Practice drafting the basic shirt/blouse with sleeve and all 3 button placket drafting samples in half scale.</li>
 <li style="text-decoration-line:underline">Carefully cut and sew the sleeve placket sewing sample in full scale and bring it to our next class meeting.</li>
 <li>Continue work on the Modular Dress project.</li>
 	<ul>
@@ -44,4 +44,5 @@
 	</ul>
 <li>Read pp.565-570, 573-577, 583-584, 587-589, 613, 375-383 <strong>(pp.659-664, 667-671, 677-678, 681-683, 707, 435-443)</strong> before Class Nine.</li>
 <li>Watch the accompanying videos provided for Week Three in <strong>Blackboard &gt; Week Five.</strong></li>
+
 </ul>
